[package]
authors = ["scrubjay55"]
name = "click-once"
version = "0.1.0"
edition = "2021"


[dependencies]
windows-sys = { version = "0.29.0", features = ["Win32_System_SystemInformation", "Win32_UI_WindowsAndMessaging", "Win32_Foundation",
                                                "Win32_System_Environment", "Win32_System_Threading"] }
static_vcruntime = "1.5"


[profile.dev]
panic = "abort"


[profile.release]
lto = true
debug = false
panic = "abort"
codegen-units = 1
